--- a/online-tutoring/src/components/Homepage.css
+++ b/online-tutoring/src/components/Homepage.css
@@ -15,112 +15,103 @@
   object-fit: cover;  /* This ensures that the image covers the circle without distortion */
 }
 
-/*STUDENT CSS*/
+.purple-panel-tutor {
+  background: linear-gradient(135deg, #B674E6, #3B2667);
+  width: 200px; 
+  height: 100%; 
+  position: fixed; 
+  top: 0; 
+  left: 100; 
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  }
 
-.search-bar {
-  width: 40%;
-  background-color: #ccc;
-  border-radius: 20px; 
-  height: 40px; 
-  margin-top: 50px;
-  border: none;
-  margin-bottom: 20px;
+  .panel-title-tutor {
+    color: white;
+    font-size: 20px; 
+    margin-top: 20px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
+    font-weight: 500;
+    padding-top: 35px;
+    padding-right: 80px;
+    }
+
+.classes-panel-tutor{
+  color: white;
+  font-size: 15px; 
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
+  font-weight: 500;
+  padding-top: 60px;
+  padding-right: 120px;
 }
 
-  .number-subjects-taught {
-    font-size: 50px;
+.hours-panel-tutor{
+  color: white;
+  font-size: 15px; 
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
+  font-weight: 500;
+  padding-top: 10px;
+  padding-right: 120px;
   }
-  .purple-panel-tutor {
-    background: linear-gradient(135deg, #B674E6, #3B2667);
-    width: 200px; 
-    height: 100%; 
-    position: fixed; 
-    top: 0; 
-    left: 100; 
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    }
+
+.subject-panel-tutor{
+  color: white;
+  font-size: 15px; 
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
+  font-weight: 500;
+  padding-right: 80px;
+}
+
+.trophy-tutor {
+  width: 50px;
+  height: auto;
+  position: relative; 
+  top: -50px; 
+  padding-left: 120px;
+}
   
-    .panel-title-tutor {
-      color: white;
-      font-size: 20px; 
-      margin-top: 20px;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
-      font-weight: 500;
-      padding-top: 35px;
-      padding-right: 80px;
-      }
+.cap-tutor {
+  width: 45px;
+  height: auto;
+  position: relative; 
+  top: -40px; 
+  padding-left: 120px;
+}
   
-  .classes-panel-tutor{
-    color: white;
-    font-size: 15px; 
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
-    font-weight: 500;
-    padding-top: 60px;
-    padding-right: 120px;
-  }
-  
-  .hours-panel-tutor{
-    color: white;
-    font-size: 15px; 
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
-    font-weight: 500;
-    padding-top: 10px;
-    padding-right: 120px;
-    }
-  
-  .subject-panel-tutor{
-    color: white;
-    font-size: 15px; 
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
-    font-weight: 500;
-    padding-right: 80px;
-  }
-  
-  .trophy-tutor {
-    width: 50px;
-    height: auto;
-    position: relative; 
-    top: -50px; 
-    padding-left: 120px;
-  }
-    
-  .cap-tutor {
-    width: 45px;
-    height: auto;
-    position: relative; 
-    top: -40px; 
-    padding-left: 120px;
-  }
-    
-  .medal-tutor {
-    width: 45px;
-    height: auto;
-    position: relative; 
-    top: -48px; 
-    padding-left: 120px;
-  }
-  
+.medal-tutor {
+  width: 45px;
+  height: auto;
+  position: relative; 
+  top: -48px; 
+  padding-left: 120px;
+}
+
 .tutor-logout {
-  padding-top: 200px
+padding-top: 200px
 }
 
 .tutor-logout-button {
-  border:none;
-  font-weight: 550;
-  color: white;
-  padding: 15px;
-  background-color: black;
-  border-radius: 10px;
-  cursor: pointer;
+border:none;
+font-weight: 550;
+color: white;
+padding: 15px;
+background-color: black;
+border-radius: 10px;
+cursor: pointer;
 }
 
 .tutor-logout-button:hover {
-  color: black;
-  background-color:white;;
-  transition:0.7s;
+color: black;
+background-color:white;;
+transition:0.7s;
 }
+
+
+.number-subjects-taught {
+  font-size: 50px;
+}
+
 
 .upcoming-appointments {
   background-color: lightgray;
@@ -150,7 +141,6 @@
   background-color:#935EC2;;
   transition:0.7s;
 }
-
 
 .student {
   font-size: 30px;
@@ -188,73 +178,10 @@
   border-left-style: groove;
   height: 100vh;
   line-height: 45px
-=======
-.search-bar-button{
-margin-right: 100px;
-background-color: transparent;
-border: none; 
-color: #B674E6; 
-cursor: pointer; 
-width: 50px; 
-font-size:20px;
 }
 
-.search-bar-button:hover{
-color: #3B2667;
-transition:0.7s;
-}
-
-.purple-panel-student {
-background: linear-gradient(135deg, #B674E6, #3B2667);
-width: 200px; 
-height: 100%; 
-position: fixed; 
-top: 0; 
-left: 100; 
-display: flex;
-flex-direction: column;
-justify-content: flex-start;
-}
-
-.panel-title-student {
-  color: white;
-  font-size: 20px; 
-  margin-top: 20px;
-  font-weight: 500;
-  padding-top: 35px;
-  padding-right: 80px;
-  }
-
-.classes-panel-student{
-color: white;
-font-size: 15px; 
-font-weight: 500;
-padding-top: 60px;
-padding-right: 120px;
-}
-
-.hours-panel-student{
-color: white;
-font-size: 15px; 
-font-weight: 500;
-padding-top: 10px;
-padding-right: 120px;
-}
-
-.subject-panel-student{
-color: white;
-font-size: 15px; 
-font-weight: 500;
-padding-right: 80px;
-
-}
-
-.trophy-student {
-width: 50px;
-height: auto;
-position: relative; 
-top: -50px; 
-padding-left: 120px;
+.profile-text-container {
+  text-align: left;
 }
 
 .edit-profile {
@@ -357,11 +284,86 @@ padding-left: 120px;
   display: flex;
   padding-left: 50px;
 }
+
+/*STUDENT CSS*/
+
 .search-bar {
-    width: 40%;
-    background-color: #ccc;
-    border-radius: 20px; 
-    height: 40px; /*issue with height*/
+  width: 40%;
+  background-color: #ccc;
+  border-radius: 20px; 
+  height: 40px; 
+  margin-top: 50px;
+  border: none;
+  margin-bottom: 20px;
+}
+
+.search-bar-button{
+margin-right: 100px;
+background-color: transparent;
+border: none; 
+color: #B674E6; 
+cursor: pointer; 
+width: 50px; 
+font-size:20px;
+}
+
+.search-bar-button:hover{
+color: #3B2667;
+transition:0.7s;
+}
+
+.purple-panel-student {
+background: linear-gradient(135deg, #B674E6, #3B2667);
+width: 200px; 
+height: 100%; 
+position: fixed; 
+top: 0; 
+left: 100; 
+display: flex;
+flex-direction: column;
+justify-content: flex-start;
+}
+
+.panel-title-student {
+  color: white;
+  font-size: 20px; 
+  margin-top: 20px;
+  font-weight: 500;
+  padding-top: 35px;
+  padding-right: 80px;
+  }
+
+.classes-panel-student{
+color: white;
+font-size: 15px; 
+font-weight: 500;
+padding-top: 60px;
+padding-right: 120px;
+}
+
+.hours-panel-student{
+color: white;
+font-size: 15px; 
+font-weight: 500;
+padding-top: 10px;
+padding-right: 120px;
+}
+
+.subject-panel-student{
+color: white;
+font-size: 15px; 
+font-weight: 500;
+padding-right: 80px;
+}
+
+.trophy-student {
+width: 50px;
+height: auto;
+position: relative; 
+top: -50px; 
+padding-left: 120px;
+}
+
 .cap-student {
 width: 45px;
 height: auto;
@@ -554,6 +556,5 @@ font-size:medium;
 color: black;
 transition:0.7s;
 }
-
 
 
