--- a/online-tutoring/src/components/Homepage.css
+++ b/online-tutoring/src/components/Homepage.css
@@ -117,9 +117,10 @@ transition:0.7s;
   background-color: lightgray;
   height: 300px;
   width: 1000px;
-  border-radius: 30px;
+  border-radius: 50px;
   overflow: auto;
   font-weight: 500;
+  display: flex;
 }
 
 .cancel-appointment {
@@ -391,7 +392,6 @@ margin-bottom: -15px;
 .dashboard-container-student{
 display: flex;
 justify-content: flex-end;
-flex-direction: column; 
 font-size: 20px;
 background: linear-gradient(135deg, #B674E6, #3B2667);
 border-radius: 50px;
@@ -412,6 +412,7 @@ margin-right: 20px;
 margin-bottom: 20px;
 text-align: left;
 overflow:auto;
+margin-top: 19px;
 }
 
 .upcoming-appts-student {
@@ -439,9 +440,10 @@ background: white;
 border-radius: 50px;
 width: 260px;
 height: 380px;
-margin-left: 40px;
 margin-bottom: -380px;
-overflow:auto;
+margin-top: 20px;
+margin-right: 40px;
+overflow: auto;
 }
 
 .favorite-tutor-title{
