--- a/online-tutoring/src/components/Homepage.css
+++ b/online-tutoring/src/components/Homepage.css
@@ -17,15 +17,15 @@
 
 .purple-panel-tutor {
   background: linear-gradient(135deg, #B674E6, #3B2667);
-  width: 200px; 
-  height: 100%; 
-  position: fixed; 
-  top: 0; 
-  left: 100; 
+  width: 13%;
+  height: 100vh; 
+  position: fixed;
+  top: 0;
+  left: 0; 
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  }
+}
+
 
   .panel-title-tutor {
     color: white;
@@ -94,16 +94,16 @@ padding-top: 200px
 .tutor-logout-button {
 border:none;
 font-weight: 550;
-color: white;
 padding: 15px;
-background-color: black;
 border-radius: 10px;
 cursor: pointer;
+background-color: transparent;
+color: white;
+font-size:medium
 }
 
 .tutor-logout-button:hover {
 color: black;
-background-color:white;;
 transition:0.7s;
 }
 
@@ -116,11 +116,12 @@ transition:0.7s;
 .upcoming-appointments {
   background-color: lightgray;
   height: 300px;
-  width: 1000px;
+  width: 750px;
   border-radius: 50px;
   overflow: auto;
   font-weight: 500;
   display: flex;
+  flex-direction: column;
 }
 
 .cancel-appointment {
@@ -154,13 +155,14 @@ transition:0.7s;
   display: flex;
   padding-right: 80px;
   padding-bottom: 30px;
+  align-content: right;
 }
 
 .profileImage {
     border-color: gray;
     border-radius: 50%;
-    width: 300px;  /* Adjust width as necessary */
-    height: 300px;  /* Adjust height as necessary */
+    width: 240px;  /* Adjust width as necessary */
+    height: 240px;  /* Adjust height as necessary */
     object-fit: cover;  /* This ensures that the image covers the circle without distortion */
 }
 
@@ -172,11 +174,12 @@ transition:0.7s;
   padding-top: 40px;
   text-align: center;
   float:right;
-  margin-right: 200px;
+  margin-right: 40px;
   border-color: black;
   padding-left: 70px;
   border-left-color: lightgray;
   border-left-style: groove;
+  padding-left: 30px;
   height: 100vh;
   line-height: 45px
 }
@@ -188,7 +191,7 @@ transition:0.7s;
 .edit-profile {
   color: #3F98CA;
   text-align: center;
-  font-size: 20px;
+  font-size: 18px;
 }
 
 .appointment-name {
@@ -246,10 +249,14 @@ transition:0.7s;
 .tutor-notifications {
   background-color: lightgray;
   height: 300px;
-  width: 1000px;
-  border-radius: 30px;
+  width: 750px;
+  border-radius: 50px;
   padding-top:20px;
   font-weight: 500;
+  display: flex;
+  align-content: right;
+  justify-content: right;
+  flex-direction: column;
 }
 
 .upappt {
@@ -326,7 +333,6 @@ top: 0;
 left: 100; 
 display: flex;
 flex-direction: column;
-justify-content: flex-start;
 }
 
 .panel-title-student {
