--- a/online-tutoring/src/components/Registration.css
+++ b/online-tutoring/src/components/Registration.css
@@ -2,9 +2,8 @@
 .new_registration-container {
   padding: 90px 50px 90px 50px; /* top, right, bottom, left */
   font-size: 20px;
-  margin-top: 40px;
+  margin-top: 50px;
   background: linear-gradient(135deg, #B674E6, #3B2667);
-  /*border: 1px solid white;*/
   border-radius: 50px;
   width: 850px;
   height: 475px;
@@ -53,7 +52,7 @@
     border-radius: 15px;
     padding: 10px 20px;
     cursor: pointer;
-    margin-right: 15px;
+    margin-left: 300px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
     font-weight: 500;
     font-size:medium;
@@ -66,20 +65,19 @@
 }
 
 .login-redirect-button {
-  background-color: black;
-  color: white;
+  background-color: transparent;
+  color: black;
   border: none;
-  border-radius: 15px;
   padding: 10px 20px;
   cursor: pointer;
-  margin-right: 15px;
+  margin-left: 30px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
   font-weight: 500;
-  font-size:medium;
+  font-size: medium;
+  white-space: nowrap;
 }
 
 .login-redirect-button:hover {
-  color: black;
-  background-color:white;
+  color: white;
   transition:0.7s;
 }
