--- a/online-tutoring/src/components/Homepage.css
+++ b/online-tutoring/src/components/Homepage.css
@@ -92,7 +92,7 @@
   font-size: 15px; 
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
   font-weight: 500;
-  padding-top: 40px;
+  padding-top: 70px;
   padding-right: 140px;
   flex-direction: column;
   }
@@ -156,7 +156,8 @@ transition:0.7s;
 
 
 .number-subjects-taught {
-  font-size: 50px;
+  font-size: 40px;
+  font-weight: 500;
 }
 
 
@@ -417,8 +418,8 @@ padding-right: 120px;
 color: white;
 font-size: 15px; 
 font-weight: 500;
-padding-top: 10px;
 padding-right: 120px;
+margin-top: -5px;
 }
 
 .subject-panel-student{
@@ -643,4 +644,20 @@ transition:0.7s;
   color: rgb(186, 108, 223);
   font-weight: 600;
   font-size: 16px;
+}
+
+.number-student-hours{
+  font-size: 40px;
+  font-weight: 500;
+  color: white;
+  margin-right: 130px;
+}
+
+.number-tutor-hours{
+  font-size: 40px;
+  font-weight: 500;
+  color: white;
+  margin-right: 130px;
+  margin-bottom: -80px;
+  align-items: center;
 }
