--- a/online-tutoring/src/components/Navbar.css
+++ b/online-tutoring/src/components/Navbar.css
@@ -3,21 +3,21 @@
     top: 0;
     width: 100%;
     z-index: 100;
-    background-color: white; /* Change the background color when sticky */
-    border-bottom: 1px solid #ccc; /* Retain the border when sticky */
+    background-color: white;
+    border-bottom: 1px solid #ccc; 
   } 
   
     
   .navbar {
-    display: flex; /* Use flexbox to control alignment */
-    justify-content: space-between; /* Space items evenly, pushing the button to the right */
-    align-items: center; /* Center items vertically within the navbar */
+    display: flex; 
+    justify-content: space-between;
+    align-items: center; 
     background-color: white; 
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: medium;
     font-weight: 500;
     padding: 15px; 
-    transition: background-color 0.6s; /* Add transition for smooth color change */
+    transition: background-color 0.6s; 
   }
 
   .signup-container {
