--- a/online-tutoring/src/components/Hero.css
+++ b/online-tutoring/src/components/Hero.css
@@ -45,7 +45,7 @@
     height: 500px; 
     background: linear-gradient(135deg, #B674E6, #3B2667);
     text-align: center;
-    color: white; /
+    color: white; 
     font-size: 20px; 
     display: flex;
     justify-content: center; 
